--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>Ramen Rater</title>
   <link rel="stylesheet" type="text/css" href="styles.css" />
-  <script defer type="module" src="./src/index.js"></script>
+  <script src="./src/index.js"></script>
 </head>
 
 <body>
@@ -34,7 +34,15 @@
     Insert comment here
   </p>
 
-
+  <form id="edit-ramen">
+    <h4>Update the Featured Ramen</h4>
+    <label for="edit-rating">Rating: </label>
+    <input type="number" name="edit-rating" id="edit-rating" />
+    <label for="edit-comment">Comment: </label>
+    <textarea name="edit-comment" id="edit-comment"></textarea>
+    <input type="submit" value="Update" />
+  </form>
+  <button id="delete-ramen" type="button">Delete Ramen</button>
   <form id="new-ramen">
     <h4>Add New Ramen</h4>
     <label for="new-name">Name: </label>
